--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -784,7 +784,8 @@ header {
 
 @media (max-width: 700px) {
   .possibilities-app .possibilities-app__item img {
-    max-width: 420px; } }
+    max-width: 420px;
+    height: auto; } }
 
 @media (max-width: 750px) {
   .slider-laptop .slider-1 {
@@ -804,6 +805,8 @@ header {
     height: 300px; } }
 
 @media (max-width: 462px) {
+  body {
+    overflow-x: hidden; }
   .main .main-slogan-wrap {
     -webkit-transform: translate(1%, 36%);
         -ms-transform: translate(1%, 36%);
