--- a/app/sass/_lending.scss
+++ b/app/sass/_lending.scss
@@ -21,6 +21,7 @@ a[href^="tel:"], a[href^="mailto:"] {
 .clr-black{
     color:#000!important;
 }
+
 .btn {
     display: inline-block;
     text-align: center;
@@ -95,6 +96,15 @@ a[href^="tel:"], a[href^="mailto:"] {
         display: inline-block;
         vertical-align: middle;
     }
+    .header-logo__items {
+        display: inline-block;
+        vertical-align: top;
+        .header-logo__txt {
+            margin-top: 3px;
+            margin-left: -12px;
+            font: 16px $fnt_rl;
+        }
+    }
 }
 
 .contacts {
@@ -117,6 +127,8 @@ a[href^="tel:"], a[href^="mailto:"] {
 
 header {
     position: relative;
+    height: 790px;
+    overflow: hidden;
     .header-container {
         position: absolute;
         text-align: center;
@@ -176,9 +188,6 @@ header {
 
 .web-app-dev {
     .web-app-dev__title {
-        text-align: center;
-        text-transform: uppercase;
-        font: 37px $fnt_rl;
         margin-bottom: 51px;
     }
     .web-app-dev__item {
@@ -188,11 +197,11 @@ header {
         // width: 270px;
         width: 22.8%;
         height: 250px;
-        font: 15px $fnt_rm;
+        font: 18px $fnt_rr;
         color: #fff;
         text-align: center;
-        padding-left: 55px;
-        padding-right: 55px;
+        padding-left: 37px;
+        padding-right: 37px;
         .web-app-dev__item-img {
             width: 75px;
             height: 75px;
@@ -371,6 +380,10 @@ header {
         .send-msg__item--txt {
             text-align: left;
         }
+        .send-msg_item--number {
+            font: 22px $fnt_rb;
+            color: $clr_main2;
+        }
     }
 }
 
@@ -411,15 +424,16 @@ header {
             bottom: 0;
             right: 0;
             margin: auto;
-            max-width: 100%;
             max-height: 100%;
+            padding-left: 22px;
+            padding-right: 22px;
             width: 296px;
             max-width: 100%;
             height: 105px;
             background: rgba(224, 224, 219, 0.8);
             text-align: center;
             text-transform: uppercase;
-            font: 16px $fnt_rb;
+            font: 15px $fnt_rb;
         }
     }
 }
@@ -427,7 +441,7 @@ header {
 .block-form {
     background: #1b1b1b;
     .block-form__title--top {
-        padding-top: 75px;
+        padding-top: 67px;
         padding-bottom: 16px;
         text-transform: uppercase;
         text-align: center;
@@ -435,7 +449,7 @@ header {
         font: 37px $fnt_rl;
     }
     .block-form__title--middle {
-        padding-bottom: 53px;
+        padding-bottom: 25px;
         text-transform: uppercase;
         text-align: center;
         color: $clr_main2;
@@ -446,26 +460,28 @@ header {
         input[type="email"],
         textarea {
             color: #a7a7a7;
-            width: 570px;
+            width: 471px;
             background: #313a3d;
             border: none;
             padding-left: 34px;
+            text-transform: uppercase;
         }
         input[type="text"],
         input[type="email"] {
-            height: 50px;
-            margin-bottom: 7px;
+            height: 44px;
+            margin-bottom: 5px;
         }
         input[type="text"]:-webkit-input-placeholder,
         input[type="email"]:-webkit-input-placeholder,
         textarea:-webkit-input-placeholder {
-            font: 16px $fnt_rl;
+            font: 15px $fnt_rl;
             color: #a7a7a7;
             text-transform: uppercase;
         }
         textarea {
-            margin-bottom: 21px;
-            height: 201px;
+            padding-top: 12px;
+            height: 141px;
+            margin-left: 15px;
         }
     }
     .btn {
@@ -473,6 +489,7 @@ header {
         height: 52px;
         background: $clr_main;
         border: none;
+        margin-top: 25px;
         margin-bottom: 75px;
         font-family: $fnt_rb;
         &:hover {
@@ -702,7 +719,7 @@ header {
         max-height: 182px;
         border-left: 1px solid #fab31a;
         border-right: 1px solid #fab31a;
-        overflow: hidden;
+        // overflow: hidden;
         margin-top: 50px;
     }
     .slider-2 .flex-prev:before {
@@ -750,4 +767,20 @@ header {
             width: auto!important;
         }
     }
+    .flex-control-nav {
+        bottom: -40px;
+    }
+    .flex-active {
+        background: $clr_main2!important;
+    }
+    .flex-control-nav li {
+        display: inline-block;
+        margin-right: 11px;
+    }
+    .flex-control-paging li a {
+        width: 9px;
+        height: 9px;
+        background: #b8b8b8;
+        border-radius: 9px;
+    } 
 }
