--- a/app/sass/_mobile.scss
+++ b/app/sass/_mobile.scss
@@ -15,8 +15,15 @@
             }
         }
     }
-
 }
+
+@media ( max-width: 1366px ){
+    .slider-laptop .slider-laptop__items {
+        transform: translate(0, -30%);
+    } 
+}
+
+
 
 @media ( max-width: 1199px ){
     .web-app-dev {
@@ -24,33 +31,47 @@
             margin-right: 23px;
         }
     }
+    .block-form {
+        .block-form__form {
+            input[type="text"], input[type="email"], textarea {
+                width: 365px;
+            }
+        }
+    }
 }
 
 @media ( max-width: 1160px ){
     .slider-laptop .slider-laptop__items {
-        transform: translate(0, 0%);
+        transform: translate(0, -24%);
     }
 }
 
 @media( max-width: 991px ){
     .web-app-dev { 
         .web-app-dev__item {
-            width: 50%;
+            width: 100%;
              margin-right: auto;
         }
+    }
+    header {
+        height: 550px;
     }
     .web-app-dev__products {
         font-size: 0;
     }
     .partners {
+        font-size: 0;
         .partners-list__item {
-            width: 100%;
+            width: 50%;
         }
     }
     .block-form .block-form__form {
         input[type="text"], input[type="email"],
         input[type="submit"], textarea {
             width: 100%;
+        }
+        textarea {
+            margin-left: 0;
         }
      }
     .slider-laptop {
@@ -67,11 +88,17 @@
 }
 
 @media( max-width: 830px ){
+    header {
+        height: auto;
+    }
     .main {
         .main-slogan-wrap {
             transform: translate(0%, 50%);
             padding-left: 5%;
         }    
+    }
+    .web-app-dev .web-app-dev__item {
+        height: 142px;
     }
     .main-nav .main-nav__items {
         display: flex;
@@ -131,13 +158,21 @@
         text-transform: uppercase;
     }
     .web-app-dev {
+        .web-app-dev__item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .web-app-dev__item-img {
+                display: none;
+            }
+        }
         .web-app-dev__plarform {
             margin-top: 0;
             .web-app-dev__plarform--title {
                 padding-top: 0;
             }
             .web-app-dev__plarformItems {
-                width: 100%;
+                width: 33%;
                 margin-top: 29px;
                 padding-bottom: 29px;
                 .web-app-dev__plarformItem {
@@ -156,6 +191,20 @@
     } 
 }
 
+@media( max-width: 750px ){
+    .slider-laptop {
+        .slider-1 {
+            margin-top: 5%;
+        }
+    }
+    .slider-laptop {
+        .slider-laptop__items {
+            background-position: top center;
+            transform: translate(0, 2%);
+        }
+    }
+}
+
 @media( max-width: 700px ){
     .possibilities-app {
         .possibilities-app__item {
@@ -167,20 +216,13 @@
     }
 }
 
-@media( max-width: 750px ){
-    .slider-laptop {
-        .slider-1 {
-            margin-top: 5%;
-        }
-    }
-    .slider-laptop {
-        .slider-laptop__items {
-            background-position: top center;
-        }
-    }
-}
-
 @media(max-width: 550px){
+    .title {
+        font-size: 28px;
+    }
+    .main-slogan__top, .main-slogan__middle {
+        font-size: 28px;
+    }
     .web-app-dev {
         .web-app-dev__item {
             width: 100%;
@@ -197,6 +239,13 @@
         .slider-laptop__items {
             height: 300px;
         }
+    }
+    .partners-list__item img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+        text-align: center;
+        margin: auto;
     }
 }
 
