--- a/app/sass/_mobile.scss
+++ b/app/sass/_mobile.scss
@@ -98,7 +98,7 @@
         }    
     }
     .web-app-dev .web-app-dev__item {
-        height: 142px;
+        height: 105px;
     }
     .main-nav .main-nav__items {
         display: flex;
@@ -168,16 +168,17 @@
         }
         .web-app-dev__plarform {
             margin-top: 0;
+            padding-bottom: 50px;
             .web-app-dev__plarform--title {
                 padding-top: 0;
             }
             .web-app-dev__plarformItems {
-                width: 33%;
+                width: 100%;
                 margin-top: 29px;
                 padding-bottom: 29px;
                 .web-app-dev__plarformItem {
                     display: inline-block;
-                    width: 100%;
+                    width: 32%;
                     padding-top: 10px;
                     padding-bottom: 10px;
                 }
@@ -246,6 +247,21 @@
         height: auto;
         text-align: center;
         margin: auto;
+        padding: 20px;
+    }
+
+    .possibilities-app {
+        .possibilities-app__item {
+            .possibilities-app__item--txt {
+                padding-left: 20px;
+                padding-right: 20px;
+                width: 125px;
+                font: 10px "Roboto-Black", sans-serif;
+            }
+            img {
+                    max-width: 156px;
+            }
+        }
     }
 }
 
