--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -225,20 +225,20 @@ header {
       margin-bottom: 48px;
       background-position: -225px; }
 
-.web-app-dev .web-app-dev__plarform {
-  margin-top: 24px;
+.web-app-dev__plarform {
+  margin-top: 70px;
   background: #e9eef0;
   min-height: 274px;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
   padding-top: 50px; }
-  .web-app-dev .web-app-dev__plarform .web-app-dev__plarform--title {
+  .web-app-dev__plarform .web-app-dev__plarform--title {
     padding-top: 50px;
     line-height: 40px; }
-  .web-app-dev .web-app-dev__plarform .web-app-dev__plarformItems {
+  .web-app-dev__plarform .web-app-dev__plarformItems {
     width: 100%;
     margin-top: 50px; }
-    .web-app-dev .web-app-dev__plarform .web-app-dev__plarformItems .web-app-dev__plarformItem {
+    .web-app-dev__plarform .web-app-dev__plarformItems .web-app-dev__plarformItem {
       display: inline-block;
       width: 15%; }
 
@@ -392,6 +392,10 @@ header {
       text-align: center;
       text-transform: uppercase;
       font: 15px "Roboto-Black", sans-serif; }
+    .possibilities-app .possibilities-app__item .possibilities-app__item--img:hover {
+      z-index: 1;
+      opacity: 0.7;
+      background-color: rgba(0, 0, 0, 0.8); }
 
 .block-form {
   background: #1b1b1b; }
@@ -529,13 +533,15 @@ header {
     font: 13px "Roboto-Light", sans-serif;
     color: #7c7c7c; }
   .free-consultation input[type="submit"] {
+    display: inline-block;
     border: none;
     background: #21ae78;
     text-transform: uppercase;
     text-align: center;
     -webkit-border-radius: 5px;
             border-radius: 5px;
-    width: 157px;
+    width: 100%;
+    padding: 10px;
     height: 52px;
     color: #fff;
     font: 16px "Roboto-Black", sans-serif; }
@@ -622,6 +628,46 @@ header {
   width: 21px;
   height: 42px;
   right: 15.5%; }
+
+@-webkit-keyframes flex-next {
+  0% {
+    -webkit-transform: translateX(150%);
+            transform: translateX(150%); }
+  50% {
+    -webkit-transform: translateX(-8%);
+            transform: translateX(-8%); }
+  65% {
+    -webkit-transform: translateX(4%);
+            transform: translateX(4%); }
+  80% {
+    -webkit-transform: translateX(-4%);
+            transform: translateX(-4%); }
+  95% {
+    -webkit-transform: translateX(2%);
+            transform: translateX(2%); }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%); } }
+
+@keyframes flex-next {
+  0% {
+    -webkit-transform: translateX(150%);
+            transform: translateX(150%); }
+  50% {
+    -webkit-transform: translateX(-8%);
+            transform: translateX(-8%); }
+  65% {
+    -webkit-transform: translateX(4%);
+            transform: translateX(4%); }
+  80% {
+    -webkit-transform: translateX(-4%);
+            transform: translateX(-4%); }
+  95% {
+    -webkit-transform: translateX(2%);
+            transform: translateX(2%); }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%); } }
 
 /*
     * slider 2
@@ -764,6 +810,10 @@ header {
         -ms-transform: translate(0%, 50%);
             transform: translate(0%, 50%);
     padding-left: 5%; }
+  .web-app-dev__plarform .web-app-dev__plarform--title {
+    padding-top: 20px; }
+  .web-app-dev__plarform .web-app-dev__plarformItems .web-app-dev__plarformItem {
+    width: 32%; }
   .web-app-dev .web-app-dev__item {
     height: 105px; }
   .main-nav .main-nav__items {
@@ -794,6 +844,8 @@ header {
     max-width: 340px; }
   .block-form__form {
     padding: 20px; }
+  .block-form .block-form__title--top {
+    font-size: 28px; }
   .get-mob-app .slider2__item--txt {
     text-transform: uppercase;
     padding-left: 2px; }
@@ -901,7 +953,11 @@ header {
     padding: 11px 0;
     max-width: 260px;
     line-height: 21px;
-    height: 63px; } }
+    height: 63px; }
+  .get-mob-app {
+    margin-top: 40px; }
+  .web-app-dev__plarform {
+    padding-bottom: 70px; } }
 
 @media (max-width: 410px) {
   header .header-container {
