--- a/app/sass/_lending.scss
+++ b/app/sass/_lending.scss
@@ -241,23 +241,24 @@ header {
             }
         }
     }
-    .web-app-dev__plarform {
-        margin-top: 24px;
-        background: #e9eef0;
-        min-height: 274px;
-        box-sizing: content-box;
+}
+
+.web-app-dev__plarform {
+    margin-top: 70px;
+    background: #e9eef0;
+    min-height: 274px;
+    box-sizing: content-box;
+    padding-top: 50px;
+    .web-app-dev__plarform--title {
         padding-top: 50px;
-        .web-app-dev__plarform--title {
-            padding-top: 50px;
-            line-height: 40px;
-        }
-        .web-app-dev__plarformItems {
-            width: 100%;
-            margin-top: 50px;
-            .web-app-dev__plarformItem {
-                display: inline-block;
-                width: 15%;
-            }
+        line-height: 40px;
+    }
+    .web-app-dev__plarformItems {
+        width: 100%;
+        margin-top: 50px;
+        .web-app-dev__plarformItem {
+            display: inline-block;
+            width: 15%;
         }
     }
 }
@@ -434,6 +435,11 @@ header {
             text-transform: uppercase;
             font: 15px $fnt_rb;
         }
+        .possibilities-app__item--img:hover {
+            z-index: 1;
+            opacity: 0.7;
+            background-color: rgba(0, 0, 0, 0.8);
+        }
     }
 }
 
@@ -587,12 +593,15 @@ header {
         color: #7c7c7c;
     }
     input[type="submit"] {
+        display: inline-block;
         border: none;
         background: $clr_main;
         text-transform: uppercase;
         text-align: center;
         border-radius: 5px;
-        width: 157px;
+        // max-width: 157px;
+        width: 100%;
+        padding: 10px;
         height: 52px;
         color: #fff;
         font: 16px $fnt_rb;
@@ -696,6 +705,26 @@ header {
             width: 21px;
             height: 42px;
             right: 15.5%;
+        }
+        @keyframes flex-next {
+            0% {
+                transform: translateX(150%);
+            }
+            50%{
+                transform: translateX(-8%);
+            }
+            65%{
+                transform: translateX(4%);
+            }
+            80%{
+                transform: translateX(-4%);
+            }
+            95%{
+                transform: translateX(2%);
+            }           
+            100% {
+                transform: translateX(0%);
+            }
         }
     
 }
