--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -355,12 +355,12 @@ header {
     width: 100%; }
   .possibilities-app .possibilities-app__item {
     position: relative;
-    display: inline-block; }
+    display: inline-block;
+    padding-bottom: 4px; }
     .possibilities-app .possibilities-app__item img {
       max-width: 472px;
       width: 100%;
-      height: 354px;
-      padding-bottom: 4px; }
+      height: 354px; }
     .possibilities-app .possibilities-app__item:nth-child(9) img, .possibilities-app .possibilities-app__item:nth-child(10) img, .possibilities-app .possibilities-app__item:nth-child(11) img, .possibilities-app .possibilities-app__item:nth-child(12) img {
       padding-bottom: 0; }
     .possibilities-app .possibilities-app__item .possibilities-app__item--txt {
@@ -392,7 +392,7 @@ header {
       text-align: center;
       text-transform: uppercase;
       font: 15px "Roboto-Black", sans-serif; }
-    .possibilities-app .possibilities-app__item .possibilities-app__item--img:hover {
+    .possibilities-app .possibilities-app__item .possibilities-app__item--img img:hover {
       z-index: 1;
       opacity: 0.7;
       background-color: rgba(0, 0, 0, 0.8); }
@@ -583,21 +583,64 @@ header {
       color: #8e8e8e; }
 
 /*
+    * Animate
+*/
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+.animated.infinite {
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite; }
+
+.fast {
+  -vendor-animation-duration: 1s;
+  -vendor-animation-delay: 0s; }
+
+@-webkit-keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); }
+  50% {
+    -webkit-transform: scale3d(1.2, 1.2, 1.2);
+    transform: scale3d(1.2, 1.2, 1.2); }
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); } }
+
+@keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); }
+  50% {
+    -webkit-transform: scale3d(1.08, 1.08, 1.08);
+    transform: scale3d(1.08, 1.08, 1.08); }
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); } }
+
+.pulse {
+  -webkit-animation-name: pulse;
+  animation-name: pulse; }
+
+/*
     * slider-1
 */
 .slider-laptop .slider-1 {
   margin: 0 auto;
   max-width: 922px;
   width: 100%;
-  max-height: 398px;
+  max-height: 425px;
   overflow: hidden;
-  margin-top: 50px;
+  margin-top: 26px;
   border: none; }
   .slider-laptop .slider-1 li {
     overflow: hidden !important; }
   .slider-laptop .slider-1 img {
     max-width: 100%;
-    padding: 0.5% 15.5% 0;
+    padding: 0% 13% 0;
     -webkit-box-sizing: border-box;
             box-sizing: border-box; }
   .slider-laptop .slider-1 .warning {
@@ -621,53 +664,13 @@ header {
   background: url(../images/arrows.png) 0 0 no-repeat;
   width: 21px;
   height: 42px;
-  left: 15.5%; }
+  left: 12.5%; }
 
 .slider-laptop .slider-1 .flex-next {
   background: url(../images/arrows.png) -22px 0 no-repeat;
   width: 21px;
   height: 42px;
-  right: 15.5%; }
-
-@-webkit-keyframes flex-next {
-  0% {
-    -webkit-transform: translateX(150%);
-            transform: translateX(150%); }
-  50% {
-    -webkit-transform: translateX(-8%);
-            transform: translateX(-8%); }
-  65% {
-    -webkit-transform: translateX(4%);
-            transform: translateX(4%); }
-  80% {
-    -webkit-transform: translateX(-4%);
-            transform: translateX(-4%); }
-  95% {
-    -webkit-transform: translateX(2%);
-            transform: translateX(2%); }
-  100% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%); } }
-
-@keyframes flex-next {
-  0% {
-    -webkit-transform: translateX(150%);
-            transform: translateX(150%); }
-  50% {
-    -webkit-transform: translateX(-8%);
-            transform: translateX(-8%); }
-  65% {
-    -webkit-transform: translateX(4%);
-            transform: translateX(4%); }
-  80% {
-    -webkit-transform: translateX(-4%);
-            transform: translateX(-4%); }
-  95% {
-    -webkit-transform: translateX(2%);
-            transform: translateX(2%); }
-  100% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%); } }
+  right: 12.5%; }
 
 /*
     * slider 2
@@ -799,8 +802,12 @@ header {
     width: 100%;
     max-height: 398px;
     overflow: hidden;
-    margin-top: 11%;
-    border: none; } }
+    margin-top: 8.8%;
+    border: none; }
+    .slider-laptop .slider-1 img {
+      padding: 0% 11.7% 0; }
+    .slider-laptop .slider-1 .flex-next, .slider-laptop .slider-1 .flex-prev {
+      left: 11.5%; } }
 
 @media (max-width: 830px) {
   header {
@@ -901,7 +908,7 @@ header {
 
 @media (max-width: 750px) {
   .slider-laptop .slider-1 {
-    margin-top: 5%; }
+    margin-top: 3%; }
   .slider-laptop .slider-laptop__items {
     background-position: top center;
     -webkit-transform: translate(0, 2%);
