--- a/app/sass/_lending.scss
+++ b/app/sass/_lending.scss
@@ -400,11 +400,11 @@ header {
     .possibilities-app__item {
         position: relative;
         display: inline-block;
+        padding-bottom: 4px;
         img {
             max-width: 472px;
             width: 100%;
             height: 354px;
-            padding-bottom: 4px;
         }
         &:nth-child(9),
         &:nth-child(10),
@@ -435,7 +435,7 @@ header {
             text-transform: uppercase;
             font: 15px $fnt_rb;
         }
-        .possibilities-app__item--img:hover {
+        .possibilities-app__item--img img:hover {
             z-index: 1;
             opacity: 0.7;
             background-color: rgba(0, 0, 0, 0.8);
@@ -655,6 +655,64 @@ header {
 }
 
 /*
+    * Animate
+*/
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.animated.infinite {
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+
+.fast {
+    -vendor-animation-duration: 1s;
+    -vendor-animation-delay: 0s;
+}
+
+@-webkit-keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.2, 1.2, 1.2);
+    transform: scale3d(1.2, 1.2, 1.2);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.08, 1.08, 1.08);
+    transform: scale3d(1.08, 1.08, 1.08);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.pulse {
+  -webkit-animation-name: pulse;
+  animation-name: pulse;
+}
+/*
     * slider-1
 */
 .slider-laptop {
@@ -662,16 +720,16 @@ header {
         margin: 0 auto;
         max-width: 922px;
         width: 100%;
-        max-height: 398px;
+        max-height: 425px;
         overflow: hidden;
-        margin-top: 50px;
+        margin-top: 26px;
         border: none;
         li {
             overflow: hidden!important;
         }
         img {
             max-width: 100%;
-            padding: 0.5% 15.5% 0;
+            padding: 0% 13% 0;
             box-sizing: border-box;
         }
         .warning{
@@ -698,38 +756,15 @@ header {
             background: url(../images/arrows.png) 0 0 no-repeat;
             width: 21px;
             height: 42px;
-            left: 15.5%;
+            left: 12.5%;
         }
         .slider-1 .flex-next {
             background: url(../images/arrows.png) -22px 0 no-repeat;
             width: 21px;
             height: 42px;
-            right: 15.5%;
+            right: 12.5%;
         }
-        @keyframes flex-next {
-            0% {
-                transform: translateX(150%);
-            }
-            50%{
-                transform: translateX(-8%);
-            }
-            65%{
-                transform: translateX(4%);
-            }
-            80%{
-                transform: translateX(-4%);
-            }
-            95%{
-                transform: translateX(2%);
-            }           
-            100% {
-                transform: translateX(0%);
-            }
-        }
-    
 }
-
-
 /*
     * slider 2
 */
