--- a/app/sass/_mobile.scss
+++ b/app/sass/_mobile.scss
@@ -86,8 +86,11 @@
           img {
               padding: 0% 11.7% 0;
           }
-          .flex-next, .flex-prev {
-              left: 11.5%;
+          .flex-next {
+              right: 11.4%;
+          }
+          .flex-prev {
+              left: 11.4%;
           }
         }
      }
